<resources>
    <string name="app_name">FilmFinal</string>
    <string name="title_detail_activity">Detail Film</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv">TV shows</string>
    <string name="title_favorite">Favorites</string>
    <string name="menu_setting_language">Change Language</string>

    <string name="poster">poster</string>
    <string name="language_code">en-US</string>
    <string name="overview">Overview</string>

    <string name="toast_success_add_favorite">Success add to favorite</string>
    <string name="delete_favorite">Remove Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="toast_success_delete_from_favorite">Success delete from favorite</string>

    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="no_movie_favorite">No Favorite Movie yet</string>
    <string name="no_tv_favorite">No Favorite TV yet</string>
    <string name="menu_search">Search</string>
    <string name="no_data">No Data Available</string>
    <string name="title_tv_favorites">TV Favorites</string>
    <string name="title_movie_favorites">Movie Favorites</string>
    <string name="reminder">Reminder</string>
    <string name="title_activity_settings">Settings</string>

    <string name="summary_release_reminder">Reminder showing the movie that released today</string>
    <string name="title_release_reminder">Release Reminder</string>
    <string name="summary_daily_reminder">Reminder for return to app</string>
    <string name="title_daily_reminder">Daily Reminder</string>
    <string name="toast_daily_reminder_activated">Daily Reminder Activated</string>
    <string name="toast_release_today_reminder_activated">Release Today Reminder Activated</string>
    <string name="toast_daily_reminder_deactivated">Daily Reminder Deactivated</string>
    <string name="toast_release_today_reminder_deactivated">Release Today Reminder Deactivated</string>
    <string name="has_been_released_today"> has been released today!</string>
    <string name="missing_you"> missing You!</string>
</resources>
